Fixed z-index issue with carousel

--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -28,7 +28,6 @@
   height: 400px;
   max-height: 400px;
   margin: auto;
-  z-index: -10;
   transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
 }
 
@@ -36,7 +35,7 @@
 .carousel__photo.active {
   opacity: 1;
   position: relative;
-  z-index: 900;
+  z-index: 1;
 }
 
 /* .carousel__photo.active:hover {
