--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -23,8 +23,6 @@ body {
   transform: translateX(-50%);
 }
 
-.nav img {
-}
 .nav-btn {
   border: none;
   background-color: transparent;
@@ -43,6 +41,7 @@ body {
   top: 0;
   left: 0;
   height: 100vh;
+  z-index: 10;
   transform: translateX(-100%);
   transition: transform 0.3s ease-in-out;
 }
